WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136667
[WebKit2] Fix build error in WebKit2/WebProcess module
https://bugs.webkit.org/show_bug.cgi?id=136667
Summary
[WebKit2] Fix build error in WebKit2/WebProcess module
Shivakumar J M
Reported
2014-09-08 22:31:06 PDT
Getting Below Build error for EFL-WK2 build, since default case is not handled. [ 84%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/Plugins/Netscape/JSNPObject.cpp.o /home/shiva.jm/webkit-git/svngitsep/WebKit/Source/WebKit2/WebProcess/Network/WebResourceLoadScheduler.cpp: In function ‘std::chrono::milliseconds WebKit::maximumBufferingTime(WebCore::CachedResource*)’: /home/shiva.jm/webkit-git/svngitsep/WebKit/Source/WebKit2/WebProcess/Network/WebResourceLoadScheduler.cpp:115:1: error: control reaches end of non-void function [-Werror=return-type] } ^ cc1plus: all warnings being treated as errors make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/Network/WebResourceLoadScheduler.cpp.o] Error 1
Attachments
Patch
(1.12 KB, patch)
2014-09-08 22:36 PDT
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.24 KB, patch)
2014-09-08 23:11 PDT
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2014-09-08 22:36:15 PDT
Created
attachment 237841
[details]
Patch Fix the build error by handling default case.
Darin Adler
Comment 2
2014-09-08 22:43:59 PDT
Comment on
attachment 237841
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=237841&action=review
> Source/WebKit2/WebProcess/Network/WebResourceLoadScheduler.cpp:116 > + default: > + return 0_ms;
We don’t want a default here, because that will disable the warning that clang and other compilers give us when we forget to handle a case. Instead, we should put this return statement outside the switch, and we should also include ASSERT_NOT_REACHED.
Shivakumar J M
Comment 3
2014-09-08 23:11:41 PDT
Created
attachment 237842
[details]
Patch for landing
Gyuyoung Kim
Comment 4
2014-09-08 23:27:57 PDT
Comment on
attachment 237842
[details]
Patch for landing cq=me
Csaba Osztrogonác
Comment 5
2014-09-08 23:39:02 PDT
Comment on
attachment 237842
[details]
Patch for landing Clearing flags on attachment: 237842 Committed
r173420
: <
http://trac.webkit.org/changeset/173420
>
Csaba Osztrogonác
Comment 6
2014-09-08 23:39:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug