[WebKit2] Fix build error in WebKit2/WebProcess module https://bugs.webkit.org/show_bug.cgi?id=136667

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-09-08
Reviewed by Darin Adler.

Fix the build error by handling default case.

* WebProcess/Network/WebResourceLoadScheduler.cpp:
(WebKit::maximumBufferingTime):

Canonical link: https://commits.webkit.org/154472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173420 268f45cc-cd09-0410-ab3c-d52691b4dbfc